<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="devices">Devices</string>
    <string name="device">Device</string>
    <string name="save">Save</string>
    <string name="error">An Error Has Occurred</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_title">Confirm Delete</string>
    <string name="confirm_delete_body">Deleting a guide CANNOT be undone. Are you sure you want to delete
        <xliff:g example="Repairing iPhone 4 Guide" id="confirm_delete_guide_name">\"%1$s\"</xliff:g>?</string>
    <string name="parse_error_title">Well, this is embarrassing</string>
    <string name="parse_error_message">An error has occurred while trying to load content from our servers.</string>
    <string name="no_connection">No connection</string>
    <string name="no_connection_title">Connection error</string>
    <string name="invalid_revision_error_title">Edit conflict</string>
    <string name="invalid_revision_error">Your changes could not be saved because the content you are editing has changed since you last opened it. Please remake your changes and try again.</string>
    <string name="fatal_error_title">Unknown Error</string>
    <string name="fatal_error">It looks like an error occurred.</string>
    <string name="forbidden_error">You have insufficient privileges to perform this action.</string>
    <string name="login_error">Invalid login. Check your email address and password to verify they are correct.</string>
    <string name="not_found_error">The requested data does not exist.</string>
    <string name="error_confirm">OK</string>
    <string name="account_menu_title">Your Account</string>
    <string name="account_username_title">Account <xliff:g example="Bob Jones" id="account_username">(%1$s)</xliff:g></string>
    <string name="slide_menu_my_guides">My Guides</string>
    <string name="slide_menu_browse_content">Browse Content</string>
    <string name="slide_menu_browse_devices">Browse <xliff:g example="Topics" id="topic_type_name">%1$s</xliff:g></string>
    <string name="slide_menu_favorite_guides">Favorite Guides</string>
    <string name="slide_menu_create_new_guide">Create New Guide</string>
    <string name="slide_menu_media_gallery">Media Manager</string>
    <string name="slide_menu_logout">Logout</string>
    <string name="slide_menu_ifixit_everywhere"><xliff:g id="brand_name">iFixit</xliff:g> Everywhere</string>
    <string name="slide_menu_youtube"><xliff:g id="youtube">Youtube</xliff:g> Channel</string>
    <string name="slide_menu_facebook"><xliff:g id="facebook">Facebook</xliff:g></string>
    <string name="slide_menu_twitter"><xliff:g id="twitter">Twitter</xliff:g></string>
    <string name="slide_menu_more_info">More Information</string>
    <string name="slide_menu_barcode_scanner">Scan QR Code</string>
    <string name="slide_menu_barcode_scanner_short">Scan</string>
    <string name="view_documents">View Document</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signin_error">Sign in error for <xliff:g example="example@example.com" id="signin_error_email">%1$s</xliff:g></string>
    <string name="try_again">Try again</string>
    <string name="register_agreement">I agree to <xliff:g><a href="http://www.ifixit.com/Info/Terms_of_Use#Section_User_Submissions">release my contributions</a></xliff:g>
        under <a href="http://www.ifixit.com/Info/Licensing">our open license</a>.</string>
    <string name="terms_unchecked_error">You must agree to the terms.</string>
    <string name="login_dialog_title">Login</string>
    <string name="register_dialog_title">Register</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email_hint">Email</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="email_hint">Email</string>
    <string name="signin_description">Login to <xliff:g id="brand_website">iFixit.com</xliff:g></string>
    <string name="register_description">Register for <xliff:g id="brand_website">iFixit.com</xliff:g></string>
    <string name="cancel_register_description">Cancel Registration</string>
    <string name="cancel_register_button">Cancel</string>
    <string name="yahoo_signin_description">Sign-in with <xliff:g id="yahoo">Yahoo!</xliff:g></string>
    <string name="empty_field_error">One or more fields are still empty.</string>
    <string name="passwords_do_not_match_error">Passwords do not match.</string>
    <string name="media_help_title">What\'s this?</string>
    <string name="media_help_message">
        This media manager is linked directly to your <xliff:g example="iFixit" id="site_name">%1$s</xliff:g> account. Any
        pictures you load into here will be available to you in your guide creation endeavors.</string>
    <string name="media_help_confirm">Good to know!</string>
    <string name="gallery_tool_tip">Add Image</string>
    <string name="camera_tool_tip">Camera</string>
    <string name="no_images_text">No images in your Media Manager. Add images with the icons above!</string>
    <string name="image_chooser_title">Select Picture</string>
    <string name="image">image</string>
    <string name="images">images</string>
    <string name="non_image_error">Images must be at least 800x600 pixels and local to your device. Valid formats are
        .png, .jpg, .jpeg, and .gif.</string>
    <string name="too_many_image_error">You can only upload four files at a time. Please wait for your current uploads to finish to upload another file.</string>
    <string name="delete_loading_image_error">One or more images are still loading and will not be deleted from the server.</string>
    <string name="media_delete_body">Are you sure you want to delete <xliff:g example="5" id="number_images_to_delete">%1$d</xliff:g>
        <xliff:g example="images" id="media_type">%2$s</xliff:g>?</string>
    <string name="generalInformation">General Information</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="guides">Guides</string>
    <string name="answers">Answers</string>
    <string name="info">Info</string>
    <string name="difficulty">Difficulty</string>
    <string name="author">Author</string>
    <string name="requiredTools">Required Tools</string>
    <string name="requiredParts">Required Parts</string>
    <string name="no_guides">No guides</string>
    <string name="topic_guide_thumbnail">Guide section thumbnail</string>
    <string name="thumbnail_desc">Thumbnail Image</string>
    <string name="topic_img_desc">Category Image</string>
    <string name="video_play_button_description">Video Play Button</string>
    <string name="video_activity_progress_title">Please Wait…</string>
    <string name="video_activity_progress_body">Loading Video…</string>
    <string name="review">Review</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="close_full_screen_desc">Close full screen button.</string>
    <string name="publish">Publish</string>
    <string name="published">Published</string>
    <string name="unpublish">Unpublish</string>
    <string name="unpublished">Unpublished</string>
    <string name="action_delete">Delete</string>
    <string name="add_guide">Add guide</string>
    <string name="no_guides_text">It looks like you don\'t have any guides. Get started by tapping the icon below!</string>
    <string name="step_edit_confirm_delete_title">Delete Step</string>
    <string name="step_edit_confirm_delete_message">Are you sure you want to delete Step %1$d?</string>
    <string name="edit">Edit</string>
    <string name="edit_guide_details">Edit Guide Details</string>
    <string name="add_step">Add Step</string>
    <string name="reorder_steps">Reorder Steps</string>
    <string name="no_steps_text">No guide steps.</string>
    <string name="step_rearrange_title">Rearrange Steps</string>
    <string name="default_title">Default Title</string>
    <string name="guide_intro_wizard_guide_type_title">Guide Type</string>
    <string name="guide_intro_wizard_guide_subject_title">Guide Subject</string>
    <string name="guide_intro_wizard_guide_title_title">Guide Title</string>
    <string name="guide_intro_wizard_guide_summary_title">Guide Summary</string>
    <string name="guide_intro_wizard_guide_introduction_title">Introduction</string>
    <string name="guide_intro_wizard_guide_topic_title">%s Name</string>
    <string name="guide_intro_wizard_guide_introduction_description">What is this guide specifically about?
        Describe the component, thing or idea that you are describing about this
        <xliff:g example="Topic" id="topic_name">%1$s</xliff:g>.
    </string>
    <string name="guide_intro_wizard_guide_summary_description">In a sentence or two, describe what this guide is about.</string>
    <string name="guide_intro_wizard_guide_title_description">
        Generated title from the type, <xliff:g id="topic_type">%1$s</xliff:g> and focus. Only edit if you aren\'t happy
        with what\'s there.
    </string>
    <string name="guide_intro_wizard_guide_subject_description">What is this guide specifically about? Describe the
        component, thing or idea that you are describing about this <xliff:g example="Topic" id="topic_name">%1$s
        </xliff:g>.</string>
    <string name="guide_intro_wizard_guide_topic_description">
        What <xliff:g example="Topic" id="topic_name">%1$s</xliff:g> are you working on? For example, is it a
        \"iPhone 4\" or a \"Kenmore Washing Machine\"? If the <xliff:g id="topic_name">%2$s</xliff:g> already exists, be
        sure to select it from the prepopulated list.
    </string>
    <string name="step_number">Step <xliff:g example="1" id="step_number">%1$d</xliff:g></string>
    <string name="step_delete_dialog_title">Delete Line</string>
    <string name="step_delete_dialog_body">Are you sure you want to delete this line?</string>
    <string name="guide_create_help">help text</string>
    <string name="guide_create_edit_steps_help">help text</string>
    <string name="guide_create_edit_step_media_cannot_add_step">Add content to current step before creating a new step.</string>
    <string name="guide_create_edit_must_add_line_content">Cannot save step until line content is added.</string>
    <string name="guide_create_confirm_leave_without_save_title">Leave Without Saving?</string>
    <string name="guide_create_confirm_leave_without_save_body">Exiting will cancel any changes you have made.</string>
    <string name="guide_create_confirm_leave_without_save_cancel">Cancel</string>
    <string name="guide_create_step_edit_main_image_description">Main step edit image</string>
    <string name="default_step_title">Untitled step</string>
    <string name="step_title_hint">Step Title (optional)</string>
    <string name="step_text_default">Insert Wisdom Here</string>
    <string name="edit_guide">Edit Guide</string>
    <string name="view_guide">View Guide</string>
    <string name="teardowns">Teardowns</string>
    <string name="featured_guides">Featured Guides</string>
    <string name="favorite_guide">Favorite Guide</string>
    <string name="view">View</string>
    <string name="voice_dictate_line_content_description">Voice dictate line content</string>
    <string name="reload_guide">Reload Guide</string>
    <string name="back_to_site_list">Back to Site List</string>
    <string name="search">Search</string>
    <string name="parts_and_tools"><![CDATA[Parts & Tools]]></string>
    <string name="comments">Comments</string>
    <string name="debug">Debug</string>
</resources>