<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite_guide"
        android:title="@string/favorite_guide"
        android:icon="@drawable/ic_action_favorite_empty"
        app:showAsAction="always"/>

    <item
        android:id="@+id/comments"
        android:title="@string/comments"
        app:actionLayout="@layout/comment_bubble"
        app:showAsAction="always"/>

    <item
        android:id="@+id/edit_guide"
        android:title="@string/edit_guide"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="ifRoom|withText"/>
    
    <item
        android:id="@+id/reload_guide"
        android:title="@string/reload_guide"
        android:icon="@drawable/ic_action_refresh_dark"
        android:showAsAction="never"/>
</menu>
