<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/add_step"
            android:title="@string/add_step"
            android:icon="@drawable/ic_add_white_24dp"
            app:showAsAction="ifRoom|withText|collapseActionView"/>
    <item
            android:id="@+id/edit_guide_details"
            android:title="@string/edit_guide_details"
            android:icon="@drawable/ic_mode_edit_white_24dp"
            app:showAsAction="ifRoom|withText"/>
    <item
            android:id="@+id/reorder_steps"
            android:title="@string/reorder_steps"
            android:icon="@drawable/ic_dialog_arrange_bullets_light"
            app:showAsAction="ifRoom|withText"/>
    <item
            android:id="@+id/view_guide"
            android:title="@string/view_guide"
            android:icon="@drawable/ic_action_book"
            app:showAsAction="ifRoom|withText"/>
</menu>
