<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        card_view:contentPadding="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:id="@+id/guide_create_item_thumbnail"
                style="@style/ListItemThumbnail"
                android:contentDescription="@string/topic_guide_thumbnail"/>

        <TextView
                android:id="@+id/guide_create_item_title"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/guide_create_item_thumbnail"
                android:layout_marginRight="@dimen/guide_create_list_item_text_right_offset"
                android:layout_alignLeft="@+id/guide_create_item_publish_status"
                android:ellipsize="end"
                android:maxLines="2"
                android:scrollHorizontally="true"
                android:text="@string/default_title"/>

        <TextView
                android:id="@+id/guide_create_item_publish_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_below="@+id/guide_create_item_title"
                android:layout_toRightOf="@+id/guide_create_item_thumbnail"
                android:text="@string/unpublished"
                android:textColor="@color/dozuki_red"
                android:textSize="12sp"
                android:textStyle="italic"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>
