<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/step_create_item"
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@color/gray"
    android:padding="1dp" 
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="4dp" >

            <ImageView
                android:id="@+id/guide_step_item_thumbnail"
                android:layout_width="@dimen/guide_thumbnail_width"
                android:layout_height="@dimen/guide_thumbnail_height"
                android:layout_marginRight="8dp"
                android:background="@color/image_border"
                android:contentDescription="@string/topic_guide_thumbnail"
                android:padding="1dp" />

            <TextView
                android:id="@+id/step_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/guide_step_item_thumbnail"
                android:text="" />

            <ToggleButton
                android:id="@+id/step_item_toggle_edit"
                android:layout_width="@dimen/guide_create_edit_button_dim"
                android:layout_height="@dimen/guide_create_edit_button_dim"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_guide_expand"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>
    </FrameLayout>
    
    <LinearLayout
        android:id="@+id/step_create_item_edit_section"
        android:layout_width="match_parent"
        android:layout_height="@dimen/gallery_top_bar_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="-50dp"
        android:background="@color/fireswing_grey"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="6dp"
        android:visibility="gone" >
        
        
<TextView
            android:id="@+id/step_create_item_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_guide_delete"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="@string/action_delete"
            android:textColor="@color/dozuki_grey" 
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
         
         <TextView
            android:id="@+id/step_create_item_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_guide_edit"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:text="@string/edit" 
            android:textColor="@color/dozuki_grey" 
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>
    

</LinearLayout>